<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addQuestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context="nineBoxQuestions.QuestionsEntryActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical"
        android:weightSum="7">

        <android.support.v7.widget.CardView
            android:id="@+id/top_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/background_main"
            android:elevation="@dimen/global_elevation"
            android:orientation="vertical"
            android:weightSum="11"
            card_view:cardBackgroundColor="@color/background_main">

            <LinearLayout
                android:id="@+id/EditTextName_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/EditQuestionText_Layout"
                    style="@style/TextLabel"
                    android:theme="@style/TextLabel"
                    card_view:errorTextAppearance="@style/MyErrorText"
                    card_view:errorEnabled="true"
                    >
                    <EditText
                        android:id="@+id/EditQuestionText"
                        style="@style/EditTextStyle"
                        android:theme="@style/MyEditText"
                        android:hint="@string/edit_question_hint"
                        android:inputType="textCapSentences|textAutoCorrect" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/EditWeight_Layout"
                        style="@style/TextLabel"
                        android:theme="@style/TextLabel"
                        card_view:errorTextAppearance="@style/MyErrorText"
                        card_view:errorEnabled="true"
                        >

                        <EditText
                            android:id="@+id/WeightValue"
                            style="@style/EditTextStyle"
                            android:theme="@style/MyEditText"
                            android:hint="@string/edit_weight_hint"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>
                    <!--<TextView-->
                        <!--android:id="@+id/WeightTitle"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="3"-->
                        <!--android:text="@string/edit_weight_title"-->
                        <!--android:textColor="@color/text_light"-->
                        <!--android:textSize="@dimen/text_size_small" />-->

                    <!--<EditText-->
                        <!--android:id="@+id/WeightValue"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="2"-->
                        <!--android:hint="@string/edit_weight_hint"-->
                        <!--android:inputType="number"-->
                        <!--android:textColor="@color/text_light"-->
                        <!--android:textSize="@dimen/text_size_small" />-->
                </LinearLayout>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/x_axis_rb"
                        style="@style/MyRadioButton"
                        android:checked="true"
                        android:text="@string/x_axis" />

                    <RadioButton
                        android:id="@+id/y_axis_rb"
                        style="@style/MyRadioButton"
                        android:checked="false"
                        android:text="@string/y_axis" />

                </RadioGroup>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/s_type_rb"
                        style="@style/MyRadioButton"
                        android:checked="true"
                        android:text="@string/s_type" />

                    <RadioButton
                        android:id="@+id/i_type_rb"
                        style="@style/MyRadioButton"
                        android:checked="false"
                        android:text="@string/i_type" />

                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/bottom_card"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_weight="3"
            android:background="@color/background_light"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="bottom|center">

                <!--android:onClick="CancelSave"-->

                <Button
                    android:id="@+id/cancel_save_candidate"
                    style="@style/MainButton"
                    android:background="@color/mutedbutton_color"
                    android:text="@string/cancel_button" />

                <!--android:onClick="saveQuestion"-->

                <Button
                    android:id="@+id/save_candidate"
                    style="@style/MainButton"
                    android:text="@string/save_button" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>