<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addCandidate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context="nineBoxCandidates.CandidatesEntryActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical"
        android:weightSum="6">

        <android.support.v7.widget.CardView
            android:id="@+id/top_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/background_main"
            android:elevation="@dimen/global_elevation"
            android:orientation="vertical"
            card_view:cardBackgroundColor="@color/background_main">

            <LinearLayout
                android:id="@+id/EditTextName_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/EditTextNameLayout"
                    style="@style/TextLabel"
                    android:theme="@style/TextLabel"
                    card_view:errorEnabled="true"
                    card_view:errorTextAppearance="@style/MyErrorText">

                    <EditText
                        android:id="@+id/EditTextName"
                        style="@style/EditTextStyle"
                        android:hint="@string/edit_candidate_hint"
                        android:inputType="textPersonName"
                        android:theme="@style/MyEditText" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/EditTextNickName_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/EditTextNickNamelayout"
                        style="@style/TextLabel"
                        android:theme="@style/TextLabel"
                        card_view:errorEnabled="false">

                        <EditText
                            android:id="@+id/EditTextNickName"
                            style="@style/EditTextStyle"
                            android:hint="@string/edit_nickname_hint"
                            android:theme="@style/MyEditText" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EditTextName_layout"
                android:layout_gravity="bottom|left"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:layout_marginLeft="@dimen/cardhead_leftmargin"
                android:layout_marginRight="@dimen/cardhead_rightmargin"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    style="@style/details_text_main"
                    android:layout_marginLeft="@dimen/cardhead_leftmargin"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_weight="1"
                    android:text="@string/edit_candidate_icon_label" />

                <ImageView
                    android:id="@+id/current_icon"
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_width"
                    android:layout_gravity="left"
                    android:layout_marginBottom="@dimen/margin_tiny" />

                <Button
                    android:id="@+id/edit_candidate_icon"
                    style="@style/details_edit_button"
                    android:layout_height="@dimen/icon_width"
                    android:layout_gravity="bottom"
                    android:layout_weight="7.73"
                    android:text="@string/edit" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/bottom_card"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/background_light"
            android:orientation="vertical"
            android:weightSum="4">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/NotesText_layout"
                style="@style/TextLabelDark"
                android:theme="@style/TextLabelDark">

                <com.example.android.funkygridlibrary.common.ActionEditText
                    android:id="@+id/NotesText"
                    style="@style/EditMultiLineTextStyleDark"
                    android:hint="@string/edit_candidate_notes_hint">

                </com.example.android.funkygridlibrary.common.ActionEditText>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/button_surrond"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/LinearLayout02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_small"
                    android:gravity="bottom|center_horizontal">

                    <Button
                        android:id="@+id/cancel_save_candidate"
                        style="@style/MainButton"
                        android:background="@color/mutedbutton_color"
                        android:text="@string/cancel_button" />

                    <Button
                        android:id="@+id/save_candidate"
                        style="@style/MainButton"
                        android:text="@string/save_button" />

                </LinearLayout>
            </LinearLayout>

    </LinearLayout>
</LinearLayout></RelativeLayout>
