<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/candidate_pop_up"
    android:orientation="vertical">

    <TextView
        android:id="@+id/candidateName"
        style="@style/PopUpBoxStyle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/PopUpBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xCoordLable" />

        <TextView
            android:id="@+id/xValue"
            style="@style/PopUpBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/PopUpBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yCoordLable" />

        <TextView
            android:id="@+id/yValue"
            style="@style/PopUpBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/PopUpBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notesLable" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/notesValue"
                style="@style/PopUpBoxStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>


    <Button
        android:id="@+id/more_button"
        style="@style/SmallButton"
        android:background="@color/mutedbutton_color"
        android:text="@string/more_button" />

</LinearLayout>